[gd_scene load_steps=4 format=3 uid="uid://phrhtriitmne"]

[ext_resource type="PackedScene" path="res://examples/scenes/detailed_scene_base.tscn" id="1_vssh6"]
[ext_resource type="Script" path="res://examples/scenes/achievements.gd" id="2_73h23"]
[ext_resource type="FontFile" path="res://examples/fonts/default_font.tres" id="3_hn4tt"]

[node name="Achievements" instance=ExtResource("1_vssh6")]
script = ExtResource("2_73h23")

[node name="MarginContainer" parent="." index="0"]
anchors_preset = 10
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2

[node name="HBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2

[node name="BackButton" parent="MarginContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="." index="1"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 90.0
offset_right = -20.0
offset_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2" index="0"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="IsAchievementsSupported" type="Label" parent="MarginContainer2/VBoxContainer" index="0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Is Achievements Supported:"

[node name="IsGetListSupported" type="Label" parent="MarginContainer2/VBoxContainer" index="1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Is Get List Supported:"

[node name="IsNativePopupSupported" type="Label" parent="MarginContainer2/VBoxContainer" index="2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Is Native Popup Supported:"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="3"]
layout_mode = 2

[node name="AchievementKeyInput" type="LineEdit" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
placeholder_text = "Key"

[node name="AchievementNameInput" type="LineEdit" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="1"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
placeholder_text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="4"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="UnlockButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Unlock"

[node name="GetListButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Get List"

[node name="ShowNativePopupButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hn4tt")
text = "Show Native Popup"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/UnlockButton" to="." method="_on_unlock_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/GetListButton" to="." method="_on_get_list_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/ShowNativePopupButton" to="." method="_on_show_native_popup_button_pressed"]
